# mmtr_ws

./: .gitignore
mmtr_description/: CMakeLists.txt  package.xml
mmtr_description/config/: display.rviz
mmtr_description/launch/: gazebo.launch.py
mmtr_description/meshes/: left_flipper_link.STL  right_flipper_link.STL
mmtr_description/urdf/: mmtr_core.xacro
src/: README.md
src/mmtr_bringup/: CMakeLists.txt  package.xml
src/mmtr_bringup/launch/: mmtr_sim.launch.py
src/mmtr_calibration/: CMakeLists.txt  package.xml
src/mmtr_calibration/mmtr_calibration/: imu_calibration.py  low_pass_filter.py
src/mmtr_collision_detection/: CMakeLists.txt  package.xml
src/mmtr_collision_detection/config/: collision_config.yaml
src/mmtr_collision_detection/launch/: collision_detection.launch.py
src/mmtr_collision_detection/mmtr_collision_detection/: collision_detection_2D.py  collision_detection_2D_refactor.py  collision_detection_3D.py  collision_detection_shim.py  imu_buffer.py  jerk_calc.py  magnetometer_check.py
src/mmtr_collision_detection/mmtr_collision_detection/config/: collision_config.py
src/mmtr_description/: CMakeLists.txt  package.xml
src/mmtr_description/config/: ekf.yaml  flipper_controller.yaml
src/mmtr_description/include/: mapping.hpp
src/mmtr_description/launch/: display.launch.py  gazebo.launch.py
src/mmtr_description/meshes/: chassis_link.STL  front_flipper_left.STL  front_flipper_right.STL  rear_flipper_left.STL  rear_flipper_right.STL  rear_right_flipper_link.STL
src/mmtr_description/meshes/keep/: base_link.STL  front_flipper_left.STL  front_flipper_right.STL  rear_flipper_left.STL  rear_flipper_right.STL
src/mmtr_description/meshes/old/: rear_left_flipper_link.STL
src/mmtr_description/mmtr_description/: gz_tf_bridge.py
src/mmtr_description/src/: flipper_controller.cpp  mapping.cpp
src/mmtr_description/urdf/: mmtr.urdf.xacro  mmtr_core.xacro  mmtr_gazebo.xacro  mmtr_ros_2_control.xacro  robot_core.xacro
src/mmtr_description/worlds/: empty.sdf  empty.world  field.sdf  small_world.sdf
src/mmtr_description/worlds/terrain/: 1.html  ROS2 Occupancy Grid Crash Sensor.html  model.config  model.sdf
src/mmtr_description/worlds/terrain/1_files/: a.html
src/mmtr_description/worlds/terrain/1_files/a_data/: main.js
src/mmtr_description/worlds/terrain/EKF UKF slip detection_files/: a.html
src/mmtr_description/worlds/terrain/EKF UKF slip detection_files/a_data/: main.js
src/mmtr_description/worlds/terrain/Ground Truth vs Odometry_files/: a.html
src/mmtr_description/worlds/terrain/Ground Truth vs Odometry_files/a_data/: main.js
src/mmtr_description/worlds/terrain/ROS2 Occupancy Grid Crash Sensor_files/: a.html
src/mmtr_description/worlds/terrain/ROS2 Occupancy Grid Crash Sensor_files/a_data/: main.js
src/mmtr_description/worlds/terrain/meshes/: map.dae  mapNEW_error.dae
src/mmtr_flipper_controller/: CMakeLists.txt  package.xml
src/mmtr_flipper_controller/config/: flipper_controller.yaml
src/mmtr_flipper_controller/launch/: flipper_controller.launch.py
src/mmtr_flipper_controller/mmtr_flipper_controller/: flipper_default_pos.py
src/mmtr_gazebo_ros2_interface/: CMakeLists.txt  package.xml
src/mmtr_local_mapping/: CMakeLists.txt  package.xml
src/mmtr_local_mapping/config/: cost_map_static.yaml  display.rviz
src/mmtr_local_mapping/launch/: local_map.launch.py
src/mmtr_local_mapping/mmtr_local_mapping/: mapping_with_collisions.py  mapping_with_collisions_real_robot.py
src/mmtr_localisation/: CMakeLists.txt  package.xml
src/mmtr_localisation/config/: ukf.yaml  ukf_real_robot.yaml
src/mmtr_localisation/launch/: localisation.launch.py  localisation_real_robot.launch.py
src/mmtr_localisation/mmtr_localisation/: auto_teleop.py  dynamic_gait_zeta_controller.py  imu_axis_correction.py  imu_calibration.py  magnetometer_frame_conversion.py  odom_covariance_override.py  pose_buffer.py  pure_pursuit.py  rewind_odom.py  simple_zupt.py  yaw_correction.py  zero_yaw.py  zupt.py
src/mmtr_msg/: CMakeLists.txt  package.xml
src/mmtr_msg/msg/: CollisionEvent.msg  RewindEvent.msg
src/mmtr_test_and_validation/: CMakeLists.txt  package.xml
src/mmtr_test_and_validation/mmtr_test_and_validation/: imu_gravity_check.py
src/mmtr_trajectories/: CMakeLists.txt  package.xml
src/mmtr_trajectories/mmtr_trajectories/: circle_teleop.py  square_teleop.py
